# gmtk-2025

./: .gitignore  Cargo.toml  README.md  build.sh  game.wat  push.sh  rustfmt.toml
metra/: Cargo.toml
metra/src/: lib.rs  prelude.rs  sys.rs
obsidian/: BREAKING! Out of the Loop.md  Brainstorming.md  Hole Loop.md
obsidian/.obsidian/: workspace.json
shell/: game.mjs  index.html  soundtest.html
shell/assets/: ants.opus  atlas.aseprite  down.opus  font.aseprite  pluck.opus  up.opus  vcr.opus  vic.opus
src/: articles.rs  button.rs  data.rs  main.rs  main_menu.rs  office.rs  text.rs  trending.rs  trending_widget.rs
word-puller/: Cargo.toml
word-puller/src/: main.rs
work/: .gitignore  atlas.aseprite  chimes.RPP  font.aseprite
